--- a/ocp_draft/index.html
+++ b/ocp_draft/index.html
@@ -19,6 +19,8 @@
     <link href="stylesheets/skins.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="stylesheets/fontello.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="stylesheets/font-awesome.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin:400,400i,700" rel="stylesheet">
     <script src="javascripts/libs.js" type="text/javascript"></script>
     <script>
       // terrificjs bootstrap
@@ -115,7 +117,7 @@
           </ul>
           <ul class='sequence-canvas'>
             <li class='frame static'>
-              <div class='bg' style='background-image: url(images/@stock/slide-1.jpg);'></div>
+              <div class='bg' style='background-image: url(images/bg.jpg);'></div>
               <div class='small-title bottom-to-top'>
                 <div class='row'>
                   <div class='large-12 columns'>
@@ -199,7 +201,7 @@
         <div class='medium-4 large-4 columns'>
           <div class='fadein mod modIconText' data-delay='0'>
             <div class='icon-text-circle'>
-              <i class='fa fa-flask'></i>
+              <i class='fa fa-suitcase'></i>
               <h3>OCP for Companies</h3>
               <p>Est aperiam ex sint maiores aliquam delectus minima rerum et natus rerum sit quae nostrum.</p>
             </div>
@@ -209,7 +211,7 @@
         <div class='medium-4 large-4 columns'>
           <div class='fadein mod modIconText' data-delay='200'>
             <div class='icon-text-circle'>
-              <i class='fa fa-paper-plane-o'></i>
+              <i class='fa fa-tty'></i>
               <h3>OCP for Operators</h3>
               <p>Est aperiam ex sint maiores aliquam delectus minima rerum et natus rerum sit quae nostrum.</p>
             </div>
@@ -219,7 +221,7 @@
         <div class='medium-4 large-4 columns'>
           <div class='fadein mod modIconText' data-delay='400'>
             <div class='icon-text-circle'>
-              <i class='fa fa-tablet'></i>
+              <i class='fa fa-building'></i>
               <h3>OCP's Industries</h3>
               <p>Est aperiam ex sint maiores aliquam delectus minima rerum et natus rerum sit quae nostrum.</p>
             </div>
@@ -229,12 +231,12 @@
         
       </div>
       <div class='spacing'></div>
-      <div class='full' style='background: #f5f5f5'>
+      <div class='bluebg full'>
         <div class='row'>
           <div class='large-12 columns'>
             <div class='mod modSectionHeader'>
               <div class='centered-text'>
-                <h2 style=''>
+                <h2 class="bluebg">
                   OCP
                 </h2>
               </div>
@@ -273,7 +275,7 @@
           <div class='medium-6 columns'>
             <div class='fadein mod modIconText' data-delay='0'>
               <div class='icon-text-simple'>
-                <i class='fa fa-trophy'></i>
+                <i class='fa fa-money'></i>
                 <h3>Buy Companies</h3>
                 <p>Accusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.</p>
               </div>
@@ -281,7 +283,7 @@
             </div>
             <div class='fadein mod modIconText' data-delay='300'>
               <div class='icon-text-simple'>
-                <i class='fa fa-cogs'></i>
+                <i class='fa fa-binoculars'></i>
                 <h3>Look for Operators</h3>
                 <p>Accusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.</p>
               </div>
@@ -289,7 +291,7 @@
             </div>
             <div class='fadein mod modIconText' data-delay='600'>
               <div class='icon-text-simple'>
-                <i class='fa fa-pagelines'></i>
+                <i class='fa fa-money'></i>
                 <h3>Funding and Capitals</h3>
                 <p>Accusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.</p>
               </div>
@@ -499,7 +501,7 @@
         <div class='large-4 medium-4 columns'>
           <h1>
             <a href='index.html'>
-              <img width="126" height="48" alt="" src="images/logo.png" />
+              <img width="126" height="48" alt="" src="images/logowhite.png" />
             </a>
           </h1>
           <p>©2017 OCP. All rights reserved.</p>
