saving before trying some madness

--- a/ocp_draft/index.html
+++ b/ocp_draft/index.html
@@ -118,31 +118,33 @@
           <ul class='sequence-canvas'>
             <li class='frame static'>
               <div class='bg' style='background-image: url(images/bg.jpg);'></div>
-              <div class='small-title bottom-to-top'>
-                <div class='row'>
-                  <div class='large-12 columns'>
-                    <h2>OCP advise organizations to get</h2>
+              <div class="gradientbg">
+                <div class='small-title bottom-to-top'>
+                  <div class='row'>
+                    <div class='large-12 columns'>
+                      <h2>OCP advise organizations to get</h2>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class='title bottom-to-top'>
-                <div class='row'>
-                  <div class='large-12 columns'>
-                    <h2>Smart Investments</h2>
+                <div class='title bottom-to-top'>
+                  <div class='row'>
+                    <div class='large-12 columns'>
+                      <h2>Smart Investments</h2>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class='buttons-wrapper bottom-to-top'>
-                <div class='row'>
-                  <div class='large-12 columns'>
-                    <div class='two spacing'></div>
-                    <a class='button' href='http://themeforest.net/user/honryou/portfolio?ref=honryou'>Learn More</a>
+                <div class='buttons-wrapper bottom-to-top'>
+                  <div class='row'>
+                    <div class='large-12 columns'>
+                      <div class='two spacing'></div>
+                      <a class='button' href='http://themeforest.net/user/honryou/portfolio?ref=honryou'>Learn More</a>
+                    </div>
                   </div>
                 </div>
               </div>
             </li>
             <li class='frame centered-text'>
-              <div class='bg' style='background-image: url(images/@stock/slide-4.jpg);'></div>
+              <div class='bg' style='background-image: url(images/bg2.jpg);'></div>
               <div class='small-title bottom-to-top'>
                 <div class='row'>
                   <div class='large-12 columns'>
@@ -168,7 +170,7 @@
               </div>
             </li>
             <li class='frame'>
-              <div class='bg' style='background-image: url(images/@stock/slide-5.jpg);'></div>
+              <div class='bg' style='background-image: url(images/bg3.jpg);'></div>
               <div class='small-title bottom-to-top'>
                 <div class='row'>
                   <div class='large-12 columns'>
