--- a/ocp_draft/about.html
+++ b/ocp_draft/about.html
@@ -314,7 +314,7 @@
         <div class='large-4 medium-4 columns'>
           <h1>
             <a href='index.html'>
-              <img width="126" height="48" alt="" src="images/logo.png" />
+              <img width="126" height="48" alt="" src="images/logowhite.png" />
             </a>
           </h1>
           <p>©2017 OCP. All rights reserved.</p>
