about page branded

--- a/ocp_draft/index.html
+++ b/ocp_draft/index.html
@@ -316,7 +316,7 @@
           <div class='large-12 columns'>
             <div class='mod modSectionHeader'>
               <div class='centered-text'>
-                <h2 style='color:white;'>
+                <h2 class='headerwhite'>
                   Important Facts
                 </h2>
               </div>
