about and industries done and done, also white stroke around logo

--- a/ocp_draft/contact.html
+++ b/ocp_draft/contact.html
@@ -98,16 +98,16 @@
     
     
     <div id='main' role='main'>
-      <div class='full parallax' style='background-image: url(images/@stock/contact-header-bg.jpg); color: #fff;'>
+      <div class='full parallax' style='background-image: url(images/bg7.jpg); color: #fff;'>
         <div class='row'>
           <div class='large-12 columns'>
             <div class='big mod modSectionHeader'>
               <div class='centered-text'>
-                <h2 style='color: #fff'>
+                <h2 class="headerwhite">
                   Contact Us
                 </h2>
               </div>
-              <h3 class='centered-text' style='color: #fff'>Drop by or send an email to us</h3>
+              <h3 class='centered-text headerwhite'>Drop by or send an email to us</h3>
             </div>
           </div>
         </div>
@@ -162,7 +162,7 @@ Dallas, TX 7525</p>
         <div class='large-4 medium-4 columns'>
           <h1>
             <a href='index.html'>
-              <img width="126" height="48" alt="" src="images/logo.png" />
+              <img width="126" height="48" alt="" src="images/logowhite.png" />
             </a>
           </h1>
           <p>©2017 OCP. All rights reserved.</p>
