--- a/ocp_draft/index.html
+++ b/ocp_draft/index.html
@@ -142,8 +142,8 @@
                 </div>
               </div>
             </li>
-            <li class='frame centered-text'>
-              <div class='bg' style='background-image: url(images/bg2.jpg);'></div>
+            <li class='frame static'>
+              <div class='bg' style='background-image: url(images/bg.jpg);'></div>
               <div class="gradientbg">
                 <div class='small-title bottom-to-top'>
                   <div class='row'>
