--- a/ocp_draft/industries.html
+++ b/ocp_draft/industries.html
@@ -102,7 +102,7 @@
 	  
 	  
     <div id='main' role='main'>
-      <div class='full parallax' style='background-image: url(images/@stock/blog-header-bg.jpg); color: #fff;'>
+      <div class='full parallax' style='background-image: url(images/bg8.jpg); color: #fff;'>
         <div class='row'>
           <div class='large-12 columns'>
             <div class='big mod modSectionHeader'>
