--- a/ocp_draft/index.html
+++ b/ocp_draft/index.html
@@ -19,8 +19,8 @@
     <link href="stylesheets/skins.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="stylesheets/fontello.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="stylesheets/font-awesome.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cabin:400,400i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet"> 
     <script src="javascripts/libs.js" type="text/javascript"></script>
     <script>
       // terrificjs bootstrap
@@ -143,7 +143,7 @@
               </div>
             </li>
             <li class='frame static'>
-              <div class='bg' style='background-image: url(images/bg.jpg);'></div>
+              <div class='bg' style='background-image: url(images/bg2.jpg);'></div>
               <div class="gradientbg">
                 <div class='small-title bottom-to-top'>
                   <div class='row'>
@@ -213,7 +213,7 @@
         <div class='medium-4 large-4 columns'>
           <div class='fadein mod modIconText' data-delay='200'>
             <div class='icon-text-circle'>
-              <i class='fa fa-tty'></i>
+              <i class='fa fa-user'></i>
               <h3>OCP for Operators</h3>
               <p>Est aperiam ex sint maiores aliquam delectus minima rerum et natus rerum sit quae nostrum.</p>
             </div>
@@ -238,7 +238,7 @@
           <div class='large-12 columns'>
             <div class='mod modSectionHeader'>
               <div class='centered-text'>
-                <h2 class="bluebg">
+                <h2 class="whitetext">
                   OCP
                 </h2>
               </div>
@@ -293,7 +293,7 @@
             </div>
             <div class='fadein mod modIconText' data-delay='600'>
               <div class='icon-text-simple'>
-                <i class='fa fa-money'></i>
+                <i class='fa fa-line-chart'></i>
                 <h3>Funding and Capitals</h3>
                 <p>Accusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.</p>
               </div>
@@ -301,7 +301,7 @@
             </div>
             <div class='fadein mod modIconText' data-delay='900'>
               <div class='icon-text-simple'>
-                <i class='fa fa-lock'></i>
+                <i class='fa fa-group'></i>
                 <h3>Management</h3>
                 <p>Accusamus laborum totam omnis inventore et error aut et eos aut. fuga mollitia vitae id enim omnis perspiciatis. modi maxime eos.</p>
               </div>
@@ -331,7 +331,7 @@
         <div class='row'>
           <div class='medium-4 large-4 columns'>
             <div class='mod modMilestone'>
-              <i class='fa fa-folder-open'></i>
+              <i class='fa fa-trophy'></i>
               <strong data-from='0' data-to='54'>&nbsp;</strong>
               <span>Revenues generated</span>
               <div class='four spacing'></div>
@@ -339,7 +339,7 @@
           </div>
           <div class='medium-4 large-4 columns'>
             <div class='mod modMilestone'>
-              <i class='fa fa-coffee'></i>
+              <i class='fa fa-folder-open'></i>
               <strong data-from='0' data-to='726'>&nbsp;</strong>
               <span>Companies Porfolio</span>
               <div class='four spacing'></div>
@@ -347,7 +347,7 @@
           </div>
           <div class='medium-4 large-4 columns'>
             <div class='mod modMilestone'>
-              <i class='fa fa-thumbs-up'></i>
+              <i class='fa fa-university'></i>
               <strong data-from='0' data-to='122'>&nbsp;</strong>
               <span>Funding Process</span>
               <div class='four spacing'></div>
@@ -381,7 +381,7 @@
           <div class='small-6 medium-6 large-6 columns'>
             <div class='mod modTeamMember'>
               <div class='member'>
-                <img class="avatar" width="250" height="250" alt="" src="images/@stock/member-1.jpg" />
+                <img class="avatar" width="250" height="250" alt="" src="images/kevin.jpg" />
                 <div class='overlay'>
                   <div class='intro'>
                     <h3>Kevin Sample</h3>
@@ -409,7 +409,7 @@
              <div class='small-6 medium-6 large-6 columns'>
             <div class='mod modTeamMember'>
               <div class='member'>
-                <img class="avatar" width="250" height="250" alt="" src="images/@stock/member-2.jpg" />
+                <img class="avatar" width="250" height="250" alt="" src="images/linda.jpg" />
                 <div class='overlay'>
                   <div class='intro'>
                     <h3>Linda Roach</h3>
@@ -497,7 +497,7 @@
     </div>
     
     
-    <div id='footer'>
+    <div id='footer' class="bluebg">
       <div class='three spacing'></div>
       <div class='row'>
         <div class='large-4 medium-4 columns'>
