--- a/ocp_draft/operators.html
+++ b/ocp_draft/operators.html
@@ -102,7 +102,7 @@
 	  
 	  
     <div id='main' role='main'>
-      <div class='full parallax' style='background-image: url(images/@stock/blog-header-bg.jpg); color: #fff;'>
+      <div class='full parallax' style='background-image: url(images/bg13.jpg); color: #fff;'>
         <div class='row'>
           <div class='large-12 columns'>
             <div class='big mod modSectionHeader'>
@@ -160,7 +160,7 @@
         <div class='large-4 medium-4 columns'>
           <h1>
             <a href='index.html'>
-              <img width="126" height="48" alt="" src="images/logo.png" />
+              <img width="126" height="48" alt="" src="images/logowhite.png" />
             </a>
           </h1>
           <p>©2017 OCP. All rights reserved.</p>
