--- a/ocp_draft/process.html
+++ b/ocp_draft/process.html
@@ -49,7 +49,7 @@
    
     <a id='top'></a>
    
-     <div class='contain-to-grid sticky'>
+    <div class='contain-to-grid sticky'>
       <nav class='top-bar' data-options='sticky_on: large' data-topbar=''>
         <ul class='title-area'>
           <li class='name'>
@@ -75,7 +75,7 @@
             <li class=''>
               <a href='industries.html'>Industries</a>
             </li>
-            <li class='has-dropdown active'>
+            <li class='has-dropdown'>
               <a href='about.html'>About Us</a>
               <ul class='dropdown'>
                 <li>
@@ -85,8 +85,8 @@
                   <a href='leadership.html'>Leadership</a>
                 </li>
                 <li class=''>
-              	  <a href='process.html'>Our Process</a>
-            	</li>
+                  <a href='process.html'>Our Process</a>
+              </li>
               </ul>
             </li>
             
@@ -96,13 +96,13 @@
           </ul>
         </section>
       </nav>
-    </div> 
+    </div>
 	  
 	  
 	  
 	  
     <div id='main' role='main'>
-      <div class='full parallax' style='background-image: url(images/@stock/blog-header-bg.jpg); color: #fff;'>
+      <div class='full parallax' style='background-image: url(images/bg15.jpg); color: #fff;'>
         <div class='row'>
           <div class='large-12 columns'>
             <div class='big mod modSectionHeader'>
@@ -199,7 +199,7 @@
         <div class='large-4 medium-4 columns'>
           <h1>
             <a href='index.html'>
-              <img width="126" height="48" alt="" src="images/logo.png" />
+              <img width="126" height="48" alt="" src="images/logowhite.png" />
             </a>
           </h1>
           <p>©2017 OCP. All rights reserved.</p>
